format: fix linter errors

--- a/index.html
+++ b/index.html
@@ -666,7 +666,13 @@
             </div>
             <div class="contact_content">
               <label for="message" class="contact_label">Message</label>
-              <textarea name="message" id="message" cols="1" rows="7" class="contact_input"></textarea>
+              <textarea
+                name="message"
+                id="message"
+                cols="1"
+                rows="7"
+                class="contact_input"
+              ></textarea>
             </div>
             <div>
               <a href="#" class="button button--flex">
@@ -698,13 +704,28 @@
             </li>
           </ul>
           <div class="footer_socials">
-            <a href="https://www.facebook.com/" rel="noopener noreferrer" target="_blank" class="footer_social">
+            <a
+              href="https://www.facebook.com/"
+              rel="noopener noreferrer"
+              target="_blank"
+              class="footer_social"
+            >
               <i class="uil uil-facebook-f"></i>
             </a>
-            <a href="https://www.instagram.com/" rel="noopener noreferrer" target="_blank" class="footer_social">
+            <a
+              href="https://www.instagram.com/"
+              rel="noopener noreferrer"
+              target="_blank"
+              class="footer_social"
+            >
               <i class="uil uil-instagram"></i>
             </a>
-            <a href="https://www.twitter.com/" rel="noopener noreferrer" target="_blank" class="footer_social">
+            <a
+              href="https://www.twitter.com/"
+              rel="noopener noreferrer"
+              target="_blank"
+              class="footer_social"
+            >
               <i class="uil uil-twitter-alt"></i>
             </a>
           </div>
