--- a/index.html
+++ b/index.html
@@ -629,7 +629,7 @@
               <i class="uil uil-phone contact_icon"></i>
               <div>
                 <h3 class="contact_title">Call me</h3>
-                <span class="contact_subtitle">08091092729</span>
+                <span class="contact_subtitle">+2348091092729</span>
               </div>
             </div>
 
