fix: add exxtra phone number

--- a/index.html
+++ b/index.html
@@ -630,6 +630,7 @@
               <div>
                 <h3 class="contact_title">Call me</h3>
                 <span class="contact_subtitle">+2348091092729</span>
+                <span class="contact_subtitle">+2348120850271</span>
               </div>
             </div>
 
