feat: update design to fit medium screen

--- a/index.html
+++ b/index.html
@@ -11,38 +11,38 @@
     <!-- =============== HEADER ================ -->
     <header class="header" id="header">
       <nav class="nav container">
-        <a href="#" class="nav-logo">A'ISH TECH</a>
-        <div class="nav-menu" id="nav-menu">
-          <ul class="nav-list grid">
+        <a href="#" class="nav_logo">A'ISH TECH</a>
+        <div class="nav_menu" id="nav_menu">
+          <ul class="nav_list grid">
             <li class="nav-item">
-              <a href="#home" class="nav-link "> <i class="uil uil-estate nav-icon"></i> home </a>
+              <a href="#home" class="nav_link "> <i class="uil uil-estate nav_icon"></i> home </a>
             </li>
             <li class="nav-item">
-              <a href="#about" class="nav-link "> <i class="uil uil-user nav-icon"></i> about </a>
+              <a href="#about" class="nav_link "> <i class="uil uil-user nav_icon"></i> about </a>
             </li>
             <li class="nav-item">
-              <a href="#skills" class="nav-link">
-                <i class="uil uil-file-alt nav-icon"></i> skills
+              <a href="#skills" class="nav_link">
+                <i class="uil uil-file-alt nav_icon"></i> skills
               </a>
             </li>
             <li class="nav-item">
-              <a href="#portfolio" class="nav-link active-link">
-                <i class="uil uil-scenery nav-icon"></i>
+              <a href="#portfolio" class="nav_link active-link">
+                <i class="uil uil-scenery nav_icon"></i>
               </a>
             </li>
             <li class="nav-item">
-              <a href="#contact" class="nav-link ">
-                <i class="uil uil-message nav-icon"></i> contact
+              <a href="#contact" class="nav_link ">
+                <i class="uil uil-message nav_icon"></i> contact
               </a>
             </li>
           </ul>
-          <i class="uil uil-times nav-close" id="nav-close"></i>
+          <i class="uil uil-times nav_close" id="nav_close"></i>
         </div>
-        <div class="nav-btn">
+        <div class="nav_btn">
           <!-- ============== theme-btn ========= -->
-          <i class="uil uil-moon change-theme" id="theme-button"></i>
+          <i class="uil uil-moon change_theme" id="theme-button"></i>
 
-          <div class="nav-toggle" id="nav-toggle">
+          <div class="nav_toggle" id="nav_toggle">
             <i class="uil uil-apps"></i>
           </div>
         </div>
@@ -88,7 +88,7 @@
                 xmlns="http://www.w3.org/2000/svg"
                 xmlns:xlink="http://www.w3.org/1999/xlink"
               >
-                <mask id="mask0" class="mask-alpha">
+                <mask id="mask0" class="mask_alpha">
                   <path
                     d="M190.312 36.4879C206.582 62.1187 201.309 102.826 182.328 134.186C163.346 165.547 
                                 130.807 187.559 100.226 186.353C69.6454 185.297 41.0228 161.023 21.7403 129.362C2.45775 
@@ -106,7 +106,7 @@
                   <image
                     height="200"
                     width="200"
-                    class="home-blob-img"
+                    class="home_blob_img"
                     x="0"
                     y="0"
                     href="./assets/images/my-pic.jpg"
@@ -126,10 +126,10 @@
             </div>
           </div>
           <div class="home_scroll">
-            <a href="#about" class="home_scroll-button button-flex">
-              <i class="uil uil-mouse-alt home_scroll-mouse"></i>
-              <span class="home_scroll-name">scroll down</span>
-              <i class="uil uil-arrow-down home_scroll-arrow"></i>
+            <a href="#about" class="home_scroll_button button-flex">
+              <i class="uil uil-mouse-alt home_scroll_mouse"></i>
+              <span class="home_scroll_name">scroll down</span>
+              <i class="uil uil-arrow-down home_scroll_arrow"></i>
             </a>
           </div>
         </div>
@@ -479,7 +479,7 @@
               <i class="uil uil-arrow-right button_icon"></i>
             </span>
             <div class="services_modal">
-              <div class="services_modal-content">
+              <div class="services_modal_content">
                 <h4 class="services_modal-title">
                   frontend <br />
                   developer
@@ -524,7 +524,7 @@
               <i class="uil uil-arrow-right button_icon"></i>
             </span>
             <div class="services_modal">
-              <div class="services_modal-content">
+              <div class="services_modal_content">
                 <h4 class="services_modal-title">
                   branding <br />
                   designer
