fix: remove comments

--- a/index.html
+++ b/index.html
@@ -741,7 +741,7 @@
       <i class="uil uil-arrow-up scrollup_icon"></i>
     </a>
 
-    <!-- <script src="./js/swiper-bundle.min.js">
+      <script src="./js/swiper-bundle.min.js">
 
         let swiper = new Swiper('.swiper-container', {
             cssMode: true,
@@ -759,7 +759,7 @@
 
         });
 
-    </script> -->
+       </script> 
     <!--==================== MAIN JS ====================-->
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
     <script src="./js/index.js"></script>
