--- a/index.html
+++ b/index.html
@@ -651,20 +651,39 @@
               </div>
             </div>
           </div>
-          <form class="contact_form grid">
+          <form class="contact_form grid" action="https://formspree.io/f/mgeddwqq" method="POST">
             <div class="contact_inputs grid">
               <div class="contact_content">
                 <label for="name" class="contact_label">Name</label>
-                <input type="text" id="name" class="contact_input" />
+                <input
+                  type="text"
+                  id="name"
+                  maxlength="30"
+                  placeholder="enter your name"
+                  required
+                  class="contact_input"
+                />
               </div>
               <div class="contact_content">
                 <label for="email" class="contact_label">Email</label>
-                <input type="email" id="email" class="contact_input" />
+                <input
+                  type="email"
+                  id="email"
+                  placeholder="enter your email-address"
+                  required
+                  class="contact_input"
+                />
               </div>
             </div>
             <div class="contact_content">
               <label for="subject" class="contact_label">Subject</label>
-              <input type="text" id="subject" class="contact_input" />
+              <input
+                type="text"
+                id="subject"
+                placeholder="write your subject"
+                required
+                class="contact_input"
+              />
             </div>
             <div class="contact_content">
               <label for="message" class="contact_label">Message</label>
@@ -674,13 +693,16 @@
                 cols="1"
                 rows="7"
                 class="contact_input"
+                required
+                placeholder="enter your message"
+                maxlength="500"
               ></textarea>
             </div>
             <div>
-              <a href="#" class="button button--flex">
+              <button type="submit" class="button button--flex">
                 Send Message
                 <i class="uil uil-message button_icon"></i>
-              </a>
+              </button>
             </div>
           </form>
         </div>
